# angelos-project-utf

./: .gitignore  LICENSE  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
generator/: build.gradle.kts
generator/src/jvmMain/kotlin/org/angproj/utf/: Main.kt  Templater.kt  TocParser.kt  UtfInfoGenerator.kt
generator/src/jvmMain/resources/: DerivedGeneralCategory.txt  supplementalData.xml
generator/src/resources/: supplementalData.xml
generator/src/utf_generator/org/angproj/: __init__.py
generator/src/utf_generator/org/angproj/utf/: blk_generate.py  iso15924.py  scr_generate.py  script.py  supplementalData_language.py  utf_generate.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jazzer/: build.gradle.kts
jazzer/src/jvmMain/kotlin/org/angproj/crypt/: FuzzPrefs.kt
jazzer/src/jvmMain/kotlin/org/angproj/utf/: FuzzPrefs.kt  FuzzerSponge256.kt
shared/: build.gradle.kts
shared/src/jvmMain/kotlin/org/angproj/utf/: FileDownloader.kt
src/commonMain/kotlin/org/angproj/utf/: AbstractUnicodeAware.kt  FilterPolicy.kt  LanguageMap.kt  UtfBlock.kt  Utility.kt
src/commonMain/kotlin/org/angproj/utf/blk/: AlchemicalSymbols.kt  AncientGreekNumbers.kt  AncientSymbols.kt  Arabic.kt  ArabicExtendedA.kt  ArabicExtendedB.kt  ArabicPresentationFormsA.kt  Armenian.kt  Balinese.kt  Bamum.kt  Bengali.kt  Bopomofo.kt  BopomofoExtended.kt  BoxDrawing.kt  Buhid.kt  (+157 more)
src/commonTest/kotlin/org/angproj/utf/: LangFilterTest.kt  TestInformationStub.kt
src/utf_generator/org/angproj/utf/: __init__.py  block.py  iso639.py  lng_generate.py
(+631 files in other folders)
